--- a/Homework13.ipynb
+++ b/Homework13.ipynb
@@ -144,7 +144,17 @@
    "outputs": [],
    "source": [
     "# TODO: write a filepath_to_label() function that turns file paths into bird names\n",
-    "# HINT: the split() function can be used twice to separate the file path by '/' and then '_'"
+    "# HINT: the split() function can be used twice to separate the file path by '/' and then '_'\n",
+    "\n",
+    "\n",
+    "def filepath_to_label(filepath: str) -> str:\n",
+    "    # Split path to get filename\n",
+    "    filename = filepath.split('/')[-1]\n",
+    "    \n",
+    "    # Split filename to get bird name\n",
+    "    label = filename.split('_')[0]\n",
+    "    \n",
+    "    return label\n"
    ]
   },
   {
@@ -211,7 +221,7 @@
     "filepath = \"./data/audio/birds/train/duck_0001.wav\"\n",
     "\n",
     "# TODO: experiment with this value and see how it changes the image\n",
-    "window_len = 400\n",
+    "window_len = 200\n",
     "\n",
     "# Get pixels from the stft() function\n",
     "pxs = wav_to_pxs(filepath, window_len)\n",
@@ -245,7 +255,17 @@
     ]
    },
    "source": [
-    "<span style=\"color:hotpink;\">EDIT THIS CELL WITH ANSWER</span>"
+    "<span style=\"color:hotpink;\">\n",
+    "\n",
+    "Changing window_len does not add or remove information from the audio. It only changes how the information is represented.\n",
+    "\n",
+    "Smaller window_len: more time detail, less frequency detail\n",
+    "\n",
+    "Larger window_len: more frequency detail, less time detail\n",
+    "\n",
+    "So the audio content stays the same, but the image looks different, which can affect how well the neural network learns patterns.\n",
+    "\n",
+    "</span>"
    ]
   },
   {
@@ -285,7 +305,29 @@
     "train_pixels = []\n",
     "train_labels = []\n",
     "\n",
-    "# TODO: iterate through the files, open them and extract pixels and labels"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: iterate through the files, open them and extract pixels and labels\n",
+    "\n",
+    "window_len = 400  # square images\n",
+    "\n",
+    "for fname in train_fnames:\n",
+    "    filepath = path.join(TRAIN_DIR, fname)\n",
+    "    \n",
+    "    # Extract pixels\n",
+    "    pxs = wav_to_pxs(filepath, window_len)\n",
+    "    train_pixels.append(pxs)\n",
+    "    \n",
+    "    # Extract label\n",
+    "    label = filepath_to_label(filepath)\n",
+    "    train_labels.append(label)"
    ]
   },
   {
@@ -317,7 +359,20 @@
     "test_pixels = []\n",
     "test_labels = []\n",
     "\n",
-    "# TODO: iterate through the files, open them and extract pixels and labels"
+    "# TODO: iterate through the files, open them and extract pixels and labels\n",
+    "\n",
+    "window_len = 400  # must match training data\n",
+    "\n",
+    "for fname in test_fnames:\n",
+    "    filepath = path.join(TEST_DIR, fname)\n",
+    "    \n",
+    "    # Extract pixels\n",
+    "    pxs = wav_to_pxs(filepath, window_len)\n",
+    "    test_pixels.append(pxs)\n",
+    "    \n",
+    "    # Extract label\n",
+    "    label = filepath_to_label(filepath)\n",
+    "    test_labels.append(label)\n"
    ]
   },
   {
@@ -373,12 +428,53 @@
    },
    "outputs": [],
    "source": [
-    "# TODO: create a label encoder\n",
-    "# TODO: encode labels and put them into a Tensor of type long() (whole numbers)\n",
-    "# TODO: encode pixels and put them into a Tensor with shape N x C x H x W\n",
-    "#       N: number of files, C: number of channels (1), H,W: image height and width (200,200)\n",
-    "# TODO: repeat for the test dataset\n",
-    "# TODO: check shapes"
+    "# TODO create a label encoder\n",
+    "unique_labels = sorted(list(set(train_labels)))\n",
+    "\n",
+    "# TODO encode labels and put them into a Tensor of type long() (whole numbers)\n",
+    "train_y = Tensor([unique_labels.index(lbl) for lbl in train_labels]).long()\n",
+    "test_y  = Tensor([unique_labels.index(lbl) for lbl in test_labels]).long()\n",
+    "\n",
+    "# TODO encode pixels and put them into a Tensor with shape N x C x H x W\n",
+    "window_len = 400\n",
+    "H = window_len // 2\n",
+    "W = len(train_pixels[0]) // H\n",
+    "\n",
+    "# Convert train pixels\n",
+    "train_X = Tensor(train_pixels).reshape(len(train_pixels), H, W)\n",
+    "train_X = train_X.unsqueeze(1)  # add channel dimension (C = 1)\n",
+    "\n",
+    "# Convert test pixels\n",
+    "test_X = Tensor(test_pixels).reshape(len(test_pixels), H, W)\n",
+    "test_X = test_X.unsqueeze(1)  # add channel dimension (C = 1)\n",
+    "\n",
+    "# TODO check shapes\n",
+    "print(\"Train X:\", train_X.shape)\n",
+    "print(\"Train y:\", train_y.shape)\n",
+    "print(\"Test X:\", test_X.shape)\n",
+    "print(\"Test y:\", test_y.shape)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "train_pixels_t = train_X\n",
+    "test_pixels_t  = test_X\n",
+    "\n",
+    "train_labels_t = train_y\n",
+    "test_labels_t  = test_y\n",
+    "\n",
+    "print(\"train_pixels_t:\", train_pixels_t.shape)\n",
+    "print(\"train_labels_t:\", train_labels_t.shape)\n",
+    "print(\"test_pixels_t:\", test_pixels_t.shape)\n",
+    "print(\"test_labels_t:\", test_labels_t.shape)\n"
    ]
   },
   {
@@ -473,14 +569,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train_res = res_transforms(train_pixels_t).to(\"cuda\")\n",
-    "x_test_res = res_transforms(test_pixels_t).to(\"cuda\")\n",
+    "import torch\n",
     "\n",
-    "y_train = train_labels_t.to(\"cuda\")\n",
-    "y_test = test_labels_t.to(\"cuda\")\n",
+    "device = torch.device(\"cpu\")\n",
+    "print(\"Using device:\", device)\n",
+    "\n",
+    "x_train_res = res_transforms(train_pixels_t).to(device)\n",
+    "x_test_res  = res_transforms(test_pixels_t).to(device)\n",
+    "\n",
+    "y_train = train_labels_t.to(device)\n",
+    "y_test  = test_labels_t.to(device)\n",
     "\n",
     "print(\"Training dataset shape:\", x_train_res.shape)\n",
-    "print(\"Image shape:\", x_train_res[0].shape)"
+    "print(\"Image shape:\", x_train_res[0].shape)\n"
    ]
   },
   {
@@ -512,14 +613,26 @@
    },
    "outputs": [],
    "source": [
-    "# TODO: instantiate a resnet34 network\n",
-    "# TODO: change the networks last layer to match the number of classes in our dataset\n",
-    "# TODO: put model on GPU\n",
+    "# TODO instantiate a resnet34 network\n",
+    "model = resnet34(weights=ResNet34_Weights.DEFAULT)\n",
     "\n",
-    "# TODO: check number of parameters that will be trained\n",
+    "# TODO change the network's last layer to match the number of classes\n",
+    "num_classes = len(unique_labels)\n",
+    "model.fc = nn.Linear(model.fc.in_features, num_classes)\n",
     "\n",
-    "# TODO: instantiate an optimizer\n",
-    "# TODO: instantiate a loss function"
+    "# TODO put model on device (CPU here)\n",
+    "import torch\n",
+    "device = torch.device(\"cpu\")\n",
+    "model = model.to(device)\n",
+    "\n",
+    "# TODO check number of parameters that will be trained\n",
+    "print(\"Trainable parameters:\", get_num_params(model))\n",
+    "\n",
+    "# TODO instantiate an optimizer\n",
+    "optim = SGD(model.parameters(), lr=0.001, momentum=0.9)\n",
+    "\n",
+    "# TODO instantiate a loss function\n",
+    "loss_fn = nn.CrossEntropyLoss()\n"
    ]
   },
   {
@@ -597,7 +710,50 @@
     "# TODO: compute loss\n",
     "# TODO: annotate neurons with loss values\n",
     "# TODO: adjust model parameters\n",
-    "# TODO: every once in a while, print loss and classification error values"
+    "# TODO: every once in a while, print loss and classification error values\n",
+    "\n",
+    "\n",
+    "import torch\n",
+    "\n",
+    "epochs = 3        # fewer epochs\n",
+    "batch_step = 20   # smaller batches\n",
+    "\n",
+    "# use small subsets for evaluation\n",
+    "eval_train = x_train_res[:200]\n",
+    "eval_train_y = y_train[:200]\n",
+    "\n",
+    "eval_test = x_test_res[:200]\n",
+    "eval_test_y = y_test[:200]\n",
+    "\n",
+    "for epoch in range(epochs):\n",
+    "    \n",
+    "    model.train()\n",
+    "    \n",
+    "    for batch_start in range(batch_step):\n",
+    "        batch_x = x_train_res[batch_start::batch_step]\n",
+    "        batch_y = y_train[batch_start::batch_step]\n",
+    "        \n",
+    "        optim.zero_grad()\n",
+    "        preds = model(batch_x)\n",
+    "        loss = loss_fn(preds, batch_y)\n",
+    "        loss.backward()\n",
+    "        optim.step()\n",
+    "    \n",
+    "\n",
+    "    model.eval()\n",
+    "    with torch.no_grad():\n",
+    "        train_preds = get_labels(model, eval_train)\n",
+    "        test_preds  = get_labels(model, eval_test)\n",
+    "    \n",
+    "    train_err = classification_error(train_preds, eval_train_y)\n",
+    "    test_err  = classification_error(test_preds, eval_test_y)\n",
+    "    \n",
+    "    print(\n",
+    "        f\"Epoch {epoch} | \"\n",
+    "        f\"Loss: {loss.item():.4f} | \"\n",
+    "        f\"Train Error: {train_err:.3f} | \"\n",
+    "        f\"Test Error: {test_err:.3f}\"\n",
+    "    )\n"
    ]
   },
   {
@@ -622,13 +778,50 @@
    "outputs": [],
    "source": [
     "# TODO: print final loss and classification error values\n",
-    "# TODO: display confusion matrices for train and test data"
+    "# TODO: display confusion matrices for train and test data\n",
+    "\n",
+    "import torch\n",
+    "\n",
+    "model.eval()\n",
+    "\n",
+    "# Use manageable subsets to avoid kernel crash\n",
+    "eval_train = x_train_res[:300]\n",
+    "eval_train_y = y_train[:300]\n",
+    "\n",
+    "eval_test = x_test_res[:300]\n",
+    "eval_test_y = y_test[:300]\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    # Predictions\n",
+    "    train_preds = get_labels(model, eval_train)\n",
+    "    test_preds  = get_labels(model, eval_test)\n",
+    "    \n",
+    "    # Loss\n",
+    "    train_logits = model(eval_train)\n",
+    "    test_logits  = model(eval_test)\n",
+    "    \n",
+    "    train_loss = loss_fn(train_logits, eval_train_y).item()\n",
+    "    test_loss  = loss_fn(test_logits, eval_test_y).item()\n",
+    "\n",
+    "# Classification error\n",
+    "train_err = classification_error(train_preds, eval_train_y)\n",
+    "test_err  = classification_error(test_preds, eval_test_y)\n",
+    "\n",
+    "# TODO: print final loss and classification error values\n",
+    "print(\"Final Training Loss:\", round(train_loss, 4))\n",
+    "print(\"Final Training Error:\", round(train_err, 3))\n",
+    "print(\"Final Test Loss:\", round(test_loss, 4))\n",
+    "print(\"Final Test Error:\", round(test_err, 3))\n",
+    "\n",
+    "# TODO: display confusion matrices for train and test data\n",
+    "display_confusion_matrix(train_preds, eval_train_y, unique_labels)\n",
+    "display_confusion_matrix(test_preds, eval_test_y, unique_labels)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "gradio",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -642,7 +835,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
